# OctoEmu

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: config.h  core.h
src/: core.c  embed.c  main.c
